# DownloadMusicYT

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  resources.qrc
src/api/: InnertubeClient.cpp  InnertubeClient.h
src/dashboard/: main.cpp
src/downloader/: DownloadManager.cpp  DownloadManager.h
src/models/: DownloadQueueModel.cpp  DownloadQueueModel.h
src/player/: NativeAudioPlayer.cpp  NativeAudioPlayer.h
src/setup/: main.cpp
ui/: main.qml
ui/components/: GlassEffect.qml
ui/views/: DownloadsView.qml  LibraryView.qml  SearchView.qml  SettingsView.qml
